# fastapi-enterprise-template

./: .env_docker_example  .env_example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pre-commit.sh  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2024_05_16_2211-b6b1ccd63fa2_init_db.py
deploy/: init_pg.py
src/: __main__.py  _types.py  app.py  config.py  context.py  deps.py  enums.py  errors.py  exception_handlers.py  exceptions.py  i18n.py  loggers.py  middlewares.py  openapi.py  security.py  validators.py
src/auth/: api.py  models.py  schemas.py  services.py
src/core/: __init__.py  _types.py  config.py
src/core/database/: engine.py
src/core/database/types/: __init__.py  annotated.py  enum.py
src/core/errors/: _error.py  auth_exceptions.py
src/core/models/mixins/: __init__.py  audit_log.py  audit_time.py  audit_user.py
src/core/repositories/: repository.py
src/core/utils/: cbv.py  context.py  i18n.py  processors.py  singleton.py
src/db/: __init__.py  _types.py  base.py  crud.py  dtobase.py  mixins.py  session.py  types.py
src/features/admin/: api.py  consts.py  models.py  repository.py  restapi.py  schemas.py  security.py  services.py
src/features/auth/: models.py  repositories.py  repository.py  restapi.py  router.py  schemas.py  security.py
src/internal/: api.py
src/libs/rabbitmq/: client.py  session.py
src/libs/redis/: cache.py
src/register/: middlewares.py  routers.py
src/utils/: cache.py
tests/: conftest.py  test_01_main.py  test_pydantic.py
